docs/0.14/_sources/api/gammapy.modeling.models.CompoundSpectralModel.rst.txt
CompoundSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: CompoundSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~CompoundSpectralModel.parameters
      ~CompoundSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~CompoundSpectralModel.__call__
      ~CompoundSpectralModel.copy
      ~CompoundSpectralModel.create
      ~CompoundSpectralModel.energy_flux
      ~CompoundSpectralModel.energy_flux_error
      ~CompoundSpectralModel.evaluate_error
      ~CompoundSpectralModel.from_dict
      ~CompoundSpectralModel.integral
      ~CompoundSpectralModel.integral_error
      ~CompoundSpectralModel.inverse
      ~CompoundSpectralModel.plot
      ~CompoundSpectralModel.plot_error
      ~CompoundSpectralModel.spectral_index
      ~CompoundSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
